# homework_27

./: .env  Dockerfile  docker-compose.yaml  pyproject.toml  simple_env
config/: settings.py  urls.py
courses/: admin.py  models.py  paginations.py  serializers.py  tasks.py  urls.py  views.py
courses/management/commands/: course_load.py
courses/migrations/: 0001_initial.py  0002_course_owner.py  0003_course_update.py
lessons/: admin.py  models.py  paginations.py  serializers.py  tests.py  urls.py  validators.py  views.py
lessons/management/commands/: lessons_load.py
lessons/migrations/: 0001_initial.py  0002_lesson_owner.py  0003_alter_lesson_course.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
users/management/commands/: csu.py  payment_load.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_subscription.py  0004_payment_link_alter_payment_amount.py  0005_payment_session_id.py  0006_alter_subscription_course_alter_subscription_user.py
